[gd_scene load_steps=4 format=3 uid="uid://cnv5m8k2x7xae"]

[ext_resource type="Script" path="res://view/hud/i18n/language_selector.gd" id="1_selector"]
[ext_resource type="PackedScene" uid="uid://d9x8y7z6a5b4c" path="res://view/hud/spinner/spinner.tscn" id="2_spinner"]
[ext_resource type="PackedScene" uid="uid://social_logo_base" path="res://view/social/social_logos.tscn" id="3_social"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.08, 0.06, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.9, 0.7, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.6)

[node name="LanguageSelector" type="CanvasLayer"]
layer = 100
script = ExtResource("1_selector")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "Select Your Language"
horizontal_alignment = 1

[node name="InputSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SeedContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/InputSection"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="SeedLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/InputSection/SeedContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "World Seed:"
horizontal_alignment = 2

[node name="SeedInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/InputSection/SeedContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
placeholder_text = "12345 (or leave empty for random)"
alignment = 1

[node name="NameContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/InputSection"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/InputSection/NameContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "Player Name:"
horizontal_alignment = 2

[node name="NameInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/InputSection/NameContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
placeholder_text = "Enter your name"
max_length = 20
alignment = 1

[node name="FlagContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24
alignment = 1

[node name="LoadingSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SpinnerContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/LoadingSection"]
layout_mode = 2
alignment = 1

[node name="Spinner" parent="Panel/MarginContainer/VBoxContainer/LoadingSection/SpinnerContainer" instance=ExtResource("2_spinner")]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Panel/MarginContainer/VBoxContainer/LoadingSection"]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = false

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/LoadingSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Initializing..."
horizontal_alignment = 1

[node name="SocialContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32
alignment = 1

[node name="DiscordLogo" parent="Panel/MarginContainer/VBoxContainer/SocialContainer" instance=ExtResource("3_social")]

[node name="TwitchLogo" parent="Panel/MarginContainer/VBoxContainer/SocialContainer" instance=ExtResource("3_social")]
